# varde

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  flake.nix
.github/canary/: canary-sbom.cdx.json
.github/workflows/: build.yml  bump-lock.yml  e2e.yml  pages.yml
docs/: design.md
docs/superpowers/plans/: 2026-07-01-varde-libc-axis-services-examples-e2e.md
docs/superpowers/specs/: 2026-07-01-varde-libc-axis-services-examples-e2e-design.md
examples/: go.Dockerfile  jre.Dockerfile  node.Dockerfile  python.Dockerfile  rust.Dockerfile
examples/go/simple/: Dockerfile  go.mod  main.go
examples/jre/spring-boot-gradle/: .dockerignore  Dockerfile  build.gradle  settings.gradle
examples/memcached/simple/: Dockerfile  README.md
examples/mysql/simple/: Dockerfile  README.md  init.sql
examples/nginx/static-site/: Dockerfile
examples/node/express/: Dockerfile  package-lock.json  package.json
examples/node/simple/: Dockerfile  main.js
examples/php/simple/: Dockerfile  README.md  index.php
examples/postgres/simple/: Dockerfile  README.md  pg_hba.conf
examples/python/requirements-venv/: Dockerfile  main.py  requirements.txt
examples/python/simple/: Dockerfile  main.py
examples/python/uv/: Dockerfile  main.py  pyproject.toml
examples/rabbitmq/simple/: Dockerfile  (+1 more)
images/: glibc.nix  go.nix  jre.nix  memcached.nix  musl.nix  mysql.nix  nginx.conf  nginx.nix  node.nix  php.nix  postgres.nix  python.nix  rabbitmq.nix  redis.nix  rust.nix  static.nix
lib/: default.nix
scripts/: e2e.sh
site/: 404.html  index.html  main.js  styles.css
(+8 files in other folders)
